--- a/WebContent/DangNhap.html
+++ b/WebContent/DangNhap.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<!-- This will be shown only after i commit -->
 <head>
 	<meta charset="utf-8">
 	<title>Insert title here</title>
