footer + fix nvarbar

--- a/WebContent/Timkiem2.html
+++ b/WebContent/Timkiem2.html
@@ -59,7 +59,9 @@
 								</div>
 								<div class="panel-footer"> 
 								<form class="form-inline col-md-offset-3 "  >
-									<button type="button" class="btn btn-primary" id="btnTimkiem">Tìm kiếm</button>
+										<button type="button" class="btn btn-info" style="margin-left:20px;" >
+         							 		<span class="glyphicon glyphicon-search" ></span> Tìm kiếm
+         							 </button>
 									
 								</form>
 								</div>		
@@ -69,7 +71,7 @@
 							<div class="panel panel-primary">
 							  <div class="panel-heading">Danh sách minh chứng</div>
 							   <span class="MyNewClass">
-							      <table class="table table-bordered table-hover specialCollapse">
+							      <table class="table table-bordered table-hover specialCollapse" >
 							    		<thead>
 									      <tr>
 									        <th>STT</th>
@@ -102,7 +104,7 @@
  
 
     <!-- Core Scripts - Include with every page -->
-    <script src="assets/plugins/jquery-1.10.2.js"></script>
+
     <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
     <script src="assets/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="assets/plugins/pace/pace.js"></script>
