--- a/WebContent/NguoiGiaoMC.html
+++ b/WebContent/NguoiGiaoMC.html
@@ -325,7 +325,7 @@
 
 
     <!-- Core Scripts - Include with every page -->
-    <script src="assets/plugins/jquery-1.10.2.js"></script>
+   
     <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
     <script src="assets/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="assets/plugins/pace/pace.js"></script>
@@ -384,5 +384,7 @@
 		</script>
 
 </body>
-
+<footer style="background-color: rgb(83, 163, 163); min-height: 90px; padding-top: 25px;padding-left:40%; ;color: #fff" >
+	<h5> © 2016 Website quản lý minh chứng đảm bảo chất lượng - Group 18</h5>
+</footer>
 </html>
