--- a/WebContent/TaoTaiKhoan.html
+++ b/WebContent/TaoTaiKhoan.html
@@ -469,5 +469,7 @@
 
 
 </body>
-
+<footer style="background-color: rgb(83, 163, 163); min-height: 90px; padding-top: 25px;padding-left:40%; ;color: #fff" >
+	<h5> © 2016 Website quản lý minh chứng đảm bảo chất lượng - Group 18</h5>
+</footer>
 </html>
