--- a/WebContent/Timkiem.html
+++ b/WebContent/Timkiem.html
@@ -254,7 +254,9 @@
 							     <label for="Key">Từ khóa</label>
 							     <input type="text" class="form-control" id="Key" placeholder="từ khóa cần tìm">
 							   </div>
-							   <button  class="btn btn-info" style="margin-left:20px;">Tìm kiếm</button>
+							  <button type="button" class="btn btn-info" style="margin-left:20px;" >
+         						 <span class="glyphicon glyphicon-search" ></span> Tìm kiếm
+         						 </button>
 							 </form>
 						</div>
 
@@ -298,7 +300,7 @@
 
 
     <!-- Core Scripts - Include with every page -->
-    <script src="assets/plugins/jquery-1.10.2.js"></script>
+
     <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
     <script src="assets/plugins/metisMenu/jquery.metisMenu.js"></script>
     <script src="assets/plugins/pace/pace.js"></script>
@@ -334,5 +336,7 @@
 	
 
 </body>
-
+<footer style="background-color: rgb(83, 163, 163); min-height: 90px; padding-top: 25px;padding-left:40%; ;color: #fff" >
+	<h5> © 2016 Website quản lý minh chứng đảm bảo chất lượng - Group 18</h5>
+</footer>
 </html>
